--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "partstimebackend",
+  "name": "part-timer-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
+    "jade": "~1.11.0",
     "morgan": "~1.9.1"
   }
 }
