--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "part-timer-backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "Part-Timer-Backend",
+  "version": "1.0.0",
+  "main": "server/server.js",
+  "engines": {
+    "node": ">=6"
+  },
   "scripts": {
-    "start": "node server.js"
+    "lint": "eslint .",
+    "start": "node .",
+    "posttest": "npm run lint"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "mongodb": "^3.6.9",
-    "morgan": "~1.9.1"
+    "compression": "^1.0.3",
+    "cors": "^2.5.2",
+    "helmet": "^3.10.0",
+    "loopback": "^3.22.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^6.2.0",
+    "nodemon": "^2.0.8",
+    "serve-favicon": "^2.0.1",
+    "strong-error-handler": "^4.0.0"
   },
-  "main": "server.js"
+  "devDependencies": {
+    "eslint": "^3.17.1",
+    "eslint-config-loopback": "^8.0.0"
+  },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "license": "UNLICENSED",
+  "description": "Part-Timer-Backend"
 }
