--- a/server/model-config.json
+++ b/server/model-config.json
@@ -35,7 +35,8 @@
     "dataSource": "db",
     "public": false
   },
-  "Message": {
-    "dataSource": null
+  "part": {
+    "dataSource": "db",
+    "public": true
   }
 }
